syntax="proto3";
package handler.protoservice;
option go_package = ".;protoservice";

message AadharDetails {
  string Id = 1;
  string Name = 2;
  string PhoneNumber = 3;
  string DateOfBirth = 4;
  string AddressLine1 = 5;
  string AddressLine2 = 6;
  string Pincode = 7;
  string City = 8;
  string State = 9;
  string Image = 10;
  string Signature = 11;
}